--- a/control-de-plagas.html
+++ b/control-de-plagas.html
@@ -69,13 +69,13 @@
           <img 
             src="img/control_plagas-min.jpg"
             alt=""
-            class="img"
+            class="w-100"
             />
         </div>
 
         <div class="col-md-6 py-5">
-          <h2 class="titulo_principal_plagas">Que es una plaga</h2>
-          <p class="parrafo">
+          <h2 class="titulo_plagas">Que es una plaga</h2>
+          <p class="parrafo_plagas">
             Se llama plaga a cualquier ser vivo que resulta perjudicial para
             otro ser vivo, generalmente cuando este es de interés para el ser
             humano. Existen plagas de interés sanitario, tales como los vectores
@@ -197,7 +197,7 @@
     <div class="container">
       <div class="row">
         <h3 class="subtitulos_plagas">Desinfección</h3>
-        <p class="parrafo">
+        <p class="parrafo_plagas">
           La desinfección es una técnica de saneamiento que tiene como finalidad
           la destrucción de bacterias, virus y hongos que perjudican la salud
           del hombre y su hábitat. Al eliminarlos se evitan infecciones,
@@ -205,7 +205,7 @@
           desinfectantes de amplio espectro y prolongada acción residual.
           Principales Ventajas de la Desinfección.
         </p>
-        <ul>
+        <ul class="parrafo_plagas">
           <li>
             Elimina todos los microorganismos, incluso los más resistentes.
           </li>
@@ -216,14 +216,14 @@
         </ul>
 
         <h3 class="subtitulos_plagas">Metodos de Aplicacion</h3>
-        <p class="parrafo">
+        <p class="parrafo_plagas">
           La desinfección ambiental se realiza con moto pulverizadores de ULTRA
           BAJO VOLUMEN, que generan una nube de gotas micronizadas de
           desinfectante. Esta nube garantiza gran eficacia y penetración; además
           permite la distribución y coberturas de las superficies imposibles de
           lograr mediante otro tipo de rociado.
         </p>
-        <p class="parrafo">
+        <p class="parrafo_plagas">
           No afecta las superficies tratadas y su rango de toxicidad para el
           hombre es prácticamente nulo. Los productos a utilizar son efectivos
           contra agentes bacterianos (Clostridium spp, Salmonella enteriditis,
@@ -234,12 +234,12 @@
         </p>
 
         <h3 class="subtitulos_plagas">Desinsectación</h3>
-        <p class="parrafo">
+        <p class="parrafo_plagas">
           La Desinsectación es una técnica de saneamiento que tiene como
           finalidad el control de insectos rastreros y voladores que perjudican
           la salud y afectan la calidad de vida del hombre.
         </p>
-        <p class="parrafo">
+        <p class="parrafo_plagas">
           Cada plaga debe ser tratada de manera particular según sus
           características. Existe una gran variedad de técnicas de aplicación,
           dependen de la superficie de las zonas a tratar, de la dificultad de
