--- a/empresa.html
+++ b/empresa.html
@@ -80,31 +80,28 @@
     <!-- COMIENZA HEADER -->
     <div class="container_historia border-bottom border-top">
       <div class="row py-5 px-5 border-bottom">
-        <div class="col-md-6">
-          
-          <p class="parrafo_empresa">
+        <div class="col-md-3">         
+          <p class="parrafo_uno">
             En 1975 nacía un proyecto, JGDESINFECCIONES, inicialmente focalizado
             en la prestación de servicios de control de plagas para
             particulares, empresas y Administración Pública, que día de hoy ha
             evolucionado hacia un concepto multiservicio en el ámbito de la
-            Sanidad Ambiental y Salubridad en sus distintas modalidades. Su
-            crecimiento durante los últimos años la sitúa como un referente a
-            nivel nacional en el sector, actuando como socio colaborador de
-            entidades y organismos importantes en sectores como la Industria
-            alimentaria, restauración y hostelería, administración pública,
-            telecomunicaciones, entidades financieras y el resto del amplio
-            espectro empresarial nacional.
+            Sanidad Ambiental y Salubridad en sus distintas modalidades.
           </p>
         </div>
-        <div class="col-md-6">
-          <p class="parrafo_empresa">
+         
+        <div class="col-md-5">
+          <img src="img/empresa (2).jpg" alt="" class="w-100">
+        </div>
+
+
+        <div class="col-md-3">
+          <p class="parrafo_dos">
             JGDesinfecciones cuenta con todos los requisitos obligatorios,
             instaurados por leyes vigentes. Habilitación municipal, director
             técnico, personal capacitado técnica y administrativamente para
             garantizarle el mejor resultado. Nos avalan 35 años de trayectoria,
-            nunca descansamos cuando de mejorar se trata, por ese motivo hemos
-            sido certificados por el prestigioso Organismo Certificador de
-            Calidad, Bureau Veritas. Certificando la norma ISO 9001:2008.
+            nunca descansamos cuando de mejorar 
           </p>
         </div>
       </div>
@@ -189,8 +186,8 @@
           <img src="img/farmer-spraying-vegetables-in-the-garden-with-herbicides-man-in-black-apron.jpg" class=" img_historia" alt="...">
         </div>
         <div class="col-md-6 px-5 py-5">
-          <h2>Mas de 15 años brindando nuestro servicio</h2>
-          <p class="parrafo_empresa">
+          <h2 class="titulo_empresa">Mas de 15 años brindando nuestro servicio</h2>
+          <p class="parrafo_tres">
             Luego de 35 años, creemos que contamos con experiencia suficiente
             para brindar a nuestros clientes un servicio serio y de calidad. La
             mejora continua, actualización y capacitación constante del
