--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
    <div class="container">
 <section class="main-row py-4">
    <article>
-      <h2 class="titulos_inicio">Desinfecciones en Cordoba </h2>
-      <p class="parrafo_inicio">En JGDESINFECCIONES, como empresa de desinfecciones en Córdoba, llevamos a cabo todo tipo de servicios relacionados como asesoramiento; tratamientos de desratización; desinsectación; legionella; tratamientos de la madera; limpieza y desinfección de alcantarillado; conductos de aire acondicionado; edificios de oficinas (interior y exteriores); limpieza de fin de obras, eliminación de graffitis, medios de transporte y vehículos a domicilio, entre otros.
-        Somos también distribuidores de sistemas de higiene, bacteriostáticos, contenedores de higiene femenina, purificadores de aire y sistemas de ozono, desengrasantes, detergentes, ambientadores y celulosa, entre otros. Ofrecemos nuestros productos y servicios tanto para particulares como para todo tipo de empresas y negocios, como los de hostelería, lavanderías o limpieza de vehículos.</p>
+      <h2 class="titulos_inicio">Desinfecciones en Cordoba <img src="img/desinfeccion.png" alt="" class="logo_desinfeccion"> </h2>
+      <p class="parrafo_inicio">En JGDESINFECCIONES, como empresa de desinfecciones en Córdoba, llevamos a cabo todo tipo de servicios relacionados como asesoramiento; tratamientos de desratización; desinsectación; legionella; tratamientos de la madera; limpieza y desinfección de alcantarillado; 
+        Somos también distribuidores de sistemas de,bacteriostáticos, contenedores de higiene femenina, purificadores de aire y sistemas de ozono, desengrasantes, detergentes, ambientadores y celulosa, entre otros. Ofrecemos nuestros productos y servicios tanto para particulares como para todo tipo de empresas y negocios.</p>
    </article>
   </section>
 
   <div class="row">
    <div class="col-md-8 py-3">
-     <h2 class="titulos_inicio">Expertos en desinfecciones</h2>
+     <h2 class="titulos_inicio">Expertos en desinfecciones <img src="img/profesional.png" alt="" class="logo_profesional"></h2>
      <p class="parrafo_inicio">
-      Como empresa de desinfecciones en Córdoba, sabemos que la mejor manera de obtener resultados óptimos es prestando servicios personalizados que se adapten en cada caso a las circunstancias y necesidades del cliente. Para ello, nuestros técnicos llevan a cabo previamente una inspección del espacio en el que se va a realizar la limpieza y desinfección. A partir de este estudio, elaboramos un plan de acción que se ajuste a las características de las instalaciones y los elementos que se encuentran en ella, seleccionando así las estrategias y productos más eficientes para cada servicio. Todo esto, cumpliendo siempre las normativas sanitarias y garantizando un servicio de máxima calidad.</p>
+       Sabemos que la mejor manera de obtener resultados óptimos es prestando servicios personalizados que se adapten en cada caso a las circunstancias y necesidades del cliente. Para ello, nuestros técnicos llevan a cabo previamente una inspección del espacio en el que se va a realizar la limpieza y desinfección. A partir de este estudio, elaboramos un plan de acción que se ajuste a las características de las instalaciones y los elementos que se encuentran en ella, seleccionando así las estrategias y productos más eficientes para cada servicio.</p>
    </div>
     
    <div class="col-md-4 py-5">
@@ -127,7 +127,7 @@
 <section class="section_dos">
 <div class="container">
   <section>
-<h2 class="titulos_inicio">Metodologia</h2>
+<h2 class="titulos_inicio">Metodologia <img src="img/inspeccion.png" alt="" class="logo_inspeccion"> </h2>
 <h4 class="subtitulos">Inspeccion</h4>
 <p class="parrafo_inicio">Se realiza una minuciosa inspección en el lugar. De esta manera podremos identificar correctamente:</p>
 <ul class="parrafo_inicio">
@@ -194,23 +194,26 @@
 <div class="container_trabajos trabajos py-4 border-top">
   <section class="main_logos bg-ligth ">
     <div class="row">
-   <article class="col-md-3 ">
-         <a href=""><img src="img/operador.png" alt="tanques,limpieza" class="logo_inicio"></a>  
-          <h5 class="titulos_trabajos">  Asesoramiento</h5>
-      </article>
+   
+
       <article class="col-md-3">
-       <a href="">  <img src="img/logo-fumigacion.png" alt="plagas,control" class="logo_inicio"></a>   
+       <a href="fumigaciones.html">  <img src="img/logo-fumigacion.png" alt="plagas,control" class="logo_inicio"></a>   
           <h5 class="titulos_trabajos"> Fumigacion</h5>
       </article>
+
+
       <article class="col-md-3">
-     <a href=""> <img src="img/logo-plagas.png" alt="incendios" class="logo_inicio"></a>    
+     <a href="control-de-plagas.html"> <img src="img/logo-plagas.png" alt="incendios" class="logo_inicio"></a>    
          <h5 class="titulos_trabajos"> Control de plagas </h5>
       </article>
   
       <article class="col-md-3">
-      <a href=""><img src="img/logo_tanque-agua.png" alt="limpieza profunda" class="logo_inicio"></a>   
+      <a href="limpieza-de-tanques.html"><img src="img/logo_tanque-agua.png" alt="limpieza profunda" class="logo_inicio"></a>   
           <h5 class="titulos_trabajos"> Limpieza De Tanques</h5>
   
+      </article><article class="col-md-3 ">
+         <a href=""><img src="img/operador.png" alt="tanques,limpieza" class="logo_inicio"></a>  
+          <h5 class="titulos_trabajos">  Asesoramiento</h5>
       </article>
     </div>
 
