--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col-md-7 px-4 py-4">
           <h2 class="subtitulos_tanques">Limpieza de tanques de agua</h2>
-          <p class="parrafo">
+          <p class="parrafo_tanques">
             JGDESINFECCIONES recuerda la conveniencia de realizar una limpieza
             periódica y adecuada de las cisternas y los tanques de
             almacenamiento domiciliarios, a fin de que el agua potable
@@ -89,7 +89,7 @@
         </div>
 
         <div class="col-md-5 px-4 py-4">
-          <img src="img/Limpieza de tanques-min.jpg" alt="" />
+          <img src="img/Limpieza de tanques-min.jpg" alt="" class="img_tanques" />
         </div>
       </div>
     </div>
@@ -100,19 +100,19 @@
   <div class="row py-5">
     <div class="col-md-6">
     
-    <img src="img/card_tanque_empresa-min.jpg" alt="" class="w-100">
+    <img src="img/card_tanque_empresa-min.jpg" alt="" class="img_tanques">
     </div>
       
     <div class="col-md-6">
       <h2 class="subtitulos_tanques">Inspeccion sanitaria</h2>
-      <p class="parrafo">Las precauciones mínimas que se deben tomar en cuanto a la seguridad del tanque domiciliario de agua potable con el propósito que el agua contenida en el mismo no altere sus condiciones de potabilidad son las siguientes:</p>
-      <ul>
+      <p class="parrafo_tanques">Las precauciones mínimas que se deben tomar en cuanto a la seguridad del tanque domiciliario de agua potable con el propósito que el agua contenida en el mismo no altere sus condiciones de potabilidad son las siguientes:</p>
+      <ul class="parrafo_tanques">
         <li>El tanque debe contar con su correspondiente tapa debidamente ubicada, sin roturas ni rajaduras.</li>
         <li>Se recomienda verificar el estado sanitario del tanque al menos cada 6 (seis) meses.</li>
         <li>Se deberá proceder al menos una 1 (una) vez al año a la limpieza y desinfección del tanque domiciliario.</li>
       </ul>
       <h3 class="subtitulos_tanques">limpieza</h3>
-      <ul>
+      <ul class="parrafo_tanques">
         <li>Cierre la llave de ingreso de agua al tanque. Luego cierre la válvula de la cañería de salida del tanque y abra la válvula de limpieza del tanque vaciándolo parcialmente hasta quedar con unos 15 cm de agua, aproximadamente, para poder lavar el fondo, las paredes y la tapa.</li>
         <li>Limpie el fondo, las paredes y la tapa del tanque con la ayuda de un cepillo o escoba de plástico. Sólo use agua, nunca use un cepillo de metal ni ningún elemento como detergente, jabón, polvo limpiador, etc.</li>
         <li>Vacié el tanque completamente por la válvula de limpieza, NO por la cañería de salida, retirando el resto del material que pudiera estar depositado en el fondo usando pala, balde y paños dejando el tanque totalmente limpio. Enjuague varias veces. Recuerde que el agua sucia de lavado no debe entrar por las cañerías internas de distribución.</li>
