--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -68,11 +68,11 @@
     <div class="container_fumigacion">
       <div class="row">
         <h2 class="titulo_fumigacion">FUMIGACION</h2>
-        <div class="col-md-7 px-5">
-          <img src="img/fumigation.jpg" alt="fumigacion" class="w-100" />
+        <div class="col-md-6 px-5">
+          <img src="img/fumigation.jpg" alt="fumigacion" class="img_fumigacion" />
         </div>
 
-        <div class="col-md-5 px-5 py-5">
+        <div class="col-md-6 px-5 py-5">
           <h5 class="subtitulos_fumigacion">¿QUE ES UNA FUMIGACION?</h5>
           <p class="parrafo_fumigacion">
             La fumigación es un tratamiento de control de plagas basado en el
