--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -64,14 +64,16 @@
 
 
     <!-- EMPIEZA MAIN -->
-    
+    <div class="titulo_tanque">
+      <h2 class="subtitulos_tanques">Limpieza de tanques de agua</h2>
+
+    </div>
 
 
 
     <div class="container_tanques">
       <div class="row">
         <div class="col-md-7 px-4 py-4">
-          <h2 class="subtitulos_tanques">Limpieza de tanques de agua</h2>
           <p class="parrafo_tanques">
             JGDESINFECCIONES recuerda la conveniencia de realizar una limpieza
             periódica y adecuada de las cisternas y los tanques de
@@ -106,7 +108,7 @@
     <div class="col-md-6">
       <h2 class="subtitulos_tanques">Inspeccion sanitaria</h2>
       <p class="parrafo_tanques">Las precauciones mínimas que se deben tomar en cuanto a la seguridad del tanque domiciliario de agua potable con el propósito que el agua contenida en el mismo no altere sus condiciones de potabilidad son las siguientes:</p>
-      <ul class="parrafo_tanques">
+      <ul class="parrafo_tanqus">
         <li>El tanque debe contar con su correspondiente tapa debidamente ubicada, sin roturas ni rajaduras.</li>
         <li>Se recomienda verificar el estado sanitario del tanque al menos cada 6 (seis) meses.</li>
         <li>Se deberá proceder al menos una 1 (una) vez al año a la limpieza y desinfección del tanque domiciliario.</li>
@@ -124,7 +126,7 @@
 
 
       <div class="d-grid gap-5  py-5" >
-        <button class="btn btn-primary" type="button">Pedir Presupuesto</button>
+        <a href="pagina_error.html">   <button class="btn btn-primary w-100" type="button">Pedir Presupuesto</button >   </a>
       </div>
 
       <footer class="footer">
