--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -123,7 +123,7 @@
     
 
     <div class="d-grid gap-5  py-5" >
-      <button class="btn btn-primary" type="button">Pedir Presupuesto</button>
+       <a href="pagina_error.html">   <button class="btn btn-primary w-100" type="button">Pedir Presupuesto</button>   </a> 
     </div>
 
     <footer class="footer">
