--- a/empresa.html
+++ b/empresa.html
@@ -91,7 +91,7 @@
         </div>
          
         <div class="col-md-5">
-          <img src="img/empresa (2).jpg" alt="" class="w-100">
+          <img src="img/empresa (2)-min.jpg" alt="" class="w-100">
         </div>
 
 
