--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -108,7 +108,7 @@
     <div class="col-md-6">
       <h2 class="subtitulos_tanques">Inspeccion sanitaria</h2>
       <p class="parrafo_tanques">Las precauciones mínimas que se deben tomar en cuanto a la seguridad del tanque domiciliario de agua potable con el propósito que el agua contenida en el mismo no altere sus condiciones de potabilidad son las siguientes:</p>
-      <ul class="parrafo_tanqus">
+      <ul class="parrafo_tanques">
         <li>El tanque debe contar con su correspondiente tapa debidamente ubicada, sin roturas ni rajaduras.</li>
         <li>Se recomienda verificar el estado sanitario del tanque al menos cada 6 (seis) meses.</li>
         <li>Se deberá proceder al menos una 1 (una) vez al año a la limpieza y desinfección del tanque domiciliario.</li>
