--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
   </head>
   <body>
    
-    <!-- <div class="top_nav">
-      <p class="parrafo_top"> <a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> tel-3512002606  </p>
-         <p class="parrafo_top">  <a href=""> <img src="img/reloj.png" alt="" class="reloj"> </a>   Abierto de lunes a viernes  <a href=""> <img src="img/insta.png" alt="" class="instagram"> </a> </p> -->
+    
 
  </div>
     <!-- INICIA NAV========================== -->
@@ -190,7 +188,7 @@
 
 
 
-
+<!-- EMPIEZA 4TA SECTION -->
 <div class="container_trabajos trabajos py-4 border-top">
   <section class="main_logos bg-ligth ">
     <div class="row">
@@ -220,6 +218,7 @@
    
   </section>
   </div>
+  <!-- TERMINA 4TA SECTION -->
 
 
 
